--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <p>A Tesla Model S a Tesla egyik zászlóshajója, amely ötvözi a modern technológiát, teljesítményt és luxust. Ezen a weboldalon részletes információkat találsz az autó tulajdonságairól, műszaki adatairól és extra felszereltségéről.</p>
 
         <h3>Főbb jellemzők:</h3>
-        <ul>
+        <img src="Jim-Belosic-Tesla-Model-S-motor-16x9-1.webp" alt="Tesla-Model-S-motor" title="Tesla-Model-S-motor" id="automotor">
+        <ul> 
             <li>Teljesen elektromos hajtás</li>
             <li>Akár 600 km hatótáv</li>
             <li>Autopilot és önvezetés</li>
