--- a/extrak.html
+++ b/extrak.html
@@ -16,6 +16,7 @@
         <a href="extrak.html">Extrák</a>
     </nav>
     <main>
+        <img src="GUID-CA0C3D61-CB14-4EDA-86B4-E09274AAD173-online-en-US.png" alt="Tesla_model_erintokepernyo" title="Tesla_model_erintokepernyo" id="Tesla_model_erintokepernyo">
         <h2>Technológia</h2>
         <ul>
             <li>17” érintőképernyős középkonzol</li>
