--- a/altalanos.html
+++ b/altalanos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Általános információk</h1>
+        <h1 class="cimek">Általános információk</h1>
     </header>
     <nav>
         <a href="index.html">Főoldal</a>
