--- a/muszaki.html
+++ b/muszaki.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Műszaki adatok</h1>
+        <h1 class="cimek">Műszaki adatok</h1>
     </header>
     <nav>
         <a href="index.html">Főoldal</a>
