--- a/muszaki.html
+++ b/muszaki.html
@@ -16,13 +16,9 @@
         <a href="extrak.html">Extrák</a>
     </nav>
     <main>
-        <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/FFfaw7vUV1o" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-        </iframe>
+    <video controls width="400">
+        <source src="Tesla Model S P100D  gyorsulás 0-100 Beschleunigung.mp4" type="video/mp4">
+    </video>
         <h2>Teljesítmény és hajtás</h2>
         <ul>
             <li>Max. teljesítmény: 1020 lóerő</li>
