--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <h2>Üdvözlünk a Tesla Model S oldalán</h2>
         <p>A Tesla Model S a Tesla egyik zászlóshajója, amely ötvözi a modern technológiát, teljesítményt és luxust. Ezen a weboldalon részletes információkat találsz az autó tulajdonságairól, műszaki adatairól és extra felszereltségéről.</p>
 
+        <div class="box">
+            <a href="https://www.tesla.com/hu_hu" target="_blank">
+                További műszaki adatok.  
+            </a>
+        </div>
+
         <h3>Főbb jellemzők:</h3>
         <img src="Tesla.motor.webp" alt="Tesla-Model-S-motor" title="Tesla-Model-S-motor" id="automotor">
         <ul> 
@@ -35,14 +41,3 @@
 </body>
 </html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
