--- a/altalanos.html
+++ b/altalanos.html
@@ -16,6 +16,11 @@
         <a href="extrak.html">Extrák</a>
     </nav>
     <main>
+        <div class="box">
+            <a href="https://hu.wikipedia.org/wiki/Elon_Musk" target="_blank">
+                Elon Musk-ról bővebben.  
+            </a>
+        </div>
         <h2>Mi is az a Tesla Model S?</h2>
         <p>A Tesla Model S egy prémium kategóriás elektromos szedán, amely 2012-ben debütált, és azóta folyamatosan fejlesztették. Kiemelkedő teljesítménye, tisztán elektromos hajtása és minimalista beltere miatt világszerte népszerű.</p>
 
