--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="box">
             <a href="https://www.tesla.com/hu_hu" target="_blank">
-                További műszaki adatok.  
+                Tesla hivatalos oldala.
             </a>
         </div>
 
