--- a/muszaki.html
+++ b/muszaki.html
@@ -16,6 +16,11 @@
         <a href="extrak.html">Extrák</a>
     </nav>
     <main>
+        <div class="box">
+            <a href="https://hvg.hu/cegauto/20161003_tesla_elon_musk_elektromos_auto_erdekessegek" target="_blank">
+                További műszaki adatok.  
+            </a>
+        </div>
         <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/FFfaw7vUV1o" 
             title="YouTube video player" 
