--- a/muszaki.html
+++ b/muszaki.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <title>Műszaki adatok</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Műszaki adatok</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1 class="cimek">Műszaki adatok</h1>
-    </header>
-    <nav>
-        <a href="index.html">Főoldal</a>
-        <a href="altalanos.html">Általános</a>
-        <a href="muszaki.html">Műszaki adatok</a>
-        <a href="extrak.html">Extrák</a>
-    </nav>
-    <main>
-        <div class="box">
-            <a href="https://hvg.hu/cegauto/20161003_tesla_elon_musk_elektromos_auto_erdekessegek" target="_blank">
-                További műszaki adatok.  
-            </a>
-        </div>
-        <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/FFfaw7vUV1o" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-        </iframe>
-        <h2>Teljesítmény és hajtás</h2>
-        <ul>
-            <li>Max. teljesítmény: 1020 lóerő</li>
-            <li>Gyorsulás 0–100 km/h: 2,1 másodperc</li>
-            <li>Végsebesség: 322 km/h</li>
-            <li>Meghajtás: Dual Motor AWD</li>
-        </ul>
-        <h2>Hatótáv és akkumulátor</h2>
-        <ul>
-            <li>Hatótáv: 600–650 km (WLTP)</li>
-            <li>Töltés: Supercharger hálózat</li>
-            <li>DC gyorstöltés: Igen</li>
-        </ul>
-    </main>
-    <footer>
-        &copy; 2025 Tesla Weboldal – Oktatási célra
-    </footer>
+  <header class="bg-dark text-white text-center py-3">
+    <h1 class="cimek">Műszaki adatok</h1>
+  </header>
+
+  <nav class="navbar navbar-expand bg-secondary justify-content-center">
+    <div class="container">
+      <ul class="navbar-nav flex-row gap-3">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Főoldal</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="altalanos.html">Általános</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="muszaki.html">Műszaki adatok</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="extrak.html">Extrák</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <main class="container my-5 bg-white p-4 rounded shadow-sm">
+    <div class="mb-4">
+      <a href="https://hvg.hu/cegauto/20161003_tesla_elon_musk_elektromos_auto_erdekessegek" target="_blank" class="btn btn-dark">
+        További műszaki adatok.
+      </a>
+    </div>
+
+    <div class="ratio ratio-16x9 mb-4">
+      <iframe src="https://www.youtube.com/embed/FFfaw7vUV1o" title="YouTube video player" allowfullscreen></iframe>
+    </div>
+
+    <h2>Teljesítmény és hajtás</h2>
+    <ul>
+      <li>Max. teljesítmény: 1020 lóerő</li>
+      <li>Gyorsulás 0–100 km/h: 2,1 másodperc</li>
+      <li>Végsebesség: 322 km/h</li>
+      <li>Meghajtás: Dual Motor AWD</li>
+    </ul>
+
+    <h2>Hatótáv és akkumulátor</h2>
+    <ul>
+      <li>Hatótáv: 600–650 km (WLTP)</li>
+      <li>Töltés: Supercharger hálózat</li>
+      <li>DC gyorstöltés: Igen</li>
+    </ul>
+  </main>
+
+  <footer class="bg-secondary text-light text-center py-3 mt-5">
+    &copy; 2025 Tesla Weboldal – Oktatási célra
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
