--- a/altalanos.html
+++ b/altalanos.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <title>Általános információk</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Általános információk</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1 class="cimek">Általános információk</h1>
-    </header>
-    <nav>
-        <a href="index.html">Főoldal</a>
-        <a href="altalanos.html">Általános</a>
-        <a href="muszaki.html">Műszaki adatok</a>
-        <a href="extrak.html">Extrák</a>
-    </nav>
-    <main>
-        <div class="box">
-            <a href="https://hu.wikipedia.org/wiki/Elon_Musk" target="_blank">
-                Elon Musk-ról bővebben.  
-            </a>
-        </div>
-        <h2>Mi is az a Tesla Model S?</h2>
-        <p>A Tesla Model S egy prémium kategóriás elektromos szedán, amely 2012-ben debütált, és azóta folyamatosan fejlesztették. Kiemelkedő teljesítménye, tisztán elektromos hajtása és minimalista beltere miatt világszerte népszerű.</p>
+  <header class="bg-dark text-white text-center py-3">
+    <h1 class="cimek">Általános információk</h1>
+  </header>
 
-        <h3>Történelem</h3>
-        <p>Az autót Elon Musk cége, a Tesla Inc. gyártja. A Model S volt az első olyan tömeggyártású elektromos autó, amely több mint 400 km hatótávolságot kínált egyetlen töltéssel.</p>
-    </main>
-    <footer>
-        &copy; 2025 Tesla Weboldal – Oktatási célra
-    </footer>
+  <nav class="navbar navbar-expand bg-secondary justify-content-center">
+    <div class="container">
+      <ul class="navbar-nav flex-row gap-3">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Főoldal</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="altalanos.html">Általános</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="muszaki.html">Műszaki adatok</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="extrak.html">Extrák</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <main class="container my-5 bg-white p-4 rounded shadow-sm">
+    <div class="mb-4">
+      <a href="https://hu.wikipedia.org/wiki/Elon_Musk" target="_blank" class="btn btn-dark">
+        Elon Musk-ról bővebben.
+      </a>
+    </div>
+    <h2>Mi is az a Tesla Model S?</h2>
+    <p>
+      A Tesla Model S egy prémium kategóriás elektromos szedán, amely 2012-ben debütált, és azóta folyamatosan fejlesztették. Kiemelkedő teljesítménye, tisztán elektromos hajtása és minimalista beltere miatt világszerte népszerű.
+    </p>
+
+    <h3>Történelem</h3>
+    <p>
+      Az autót Elon Musk cége, a Tesla Inc. gyártja. A Model S volt az első olyan tömeggyártású elektromos autó, amely több mint 400 km hatótávolságot kínált egyetlen töltéssel.
+    </p>
+  </main>
+
+  <footer class="bg-secondary text-light text-center py-3 mt-5">
+    &copy; 2025 Tesla Weboldal – Oktatási célra
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
