--- a/extrak.html
+++ b/extrak.html
@@ -22,8 +22,7 @@
       </ul>
     </div>
   </nav>
-
-  <main class="container my-5 bg-white p-4 rounded shadow-sm">
+   <main class="container my-5 bg-white p-4 rounded shadow-sm">
     <div class="row align-items-center mb-4">
       <div class="col-md-6">
         <img src="Tesla.erintokepernyo.png" alt="Tesla_model_erintokepernyo" title="Tesla_model_erintokepernyo" class="img-fluid rounded" />
@@ -51,4 +50,4 @@
           <li>Prémium hangrendszer</li>
         </ul>
       </div>
-   
+</html>
