--- a/muszaki.html
+++ b/muszaki.html
@@ -30,30 +30,58 @@
       </a>
     </div>
 
-    <video controls width="400">
-        <source src="TeslaModelSP100Dgyorsulás0-100Beschleunigung.mp4" type="video/mp4">
-    </video>
-
-    <h2>Teljesítmény és hajtás</h2>
-    <ul>
-      <li>Max. teljesítmény: 1020 lóerő</li>
-      <li>Gyorsulás 0–100 km/h: 2,1 másodperc</li>
-      <li>Végsebesség: 322 km/h</li>
-      <li>Meghajtás: Dual Motor AWD</li>
-    </ul>
-
-    <h2>Hatótáv és akkumulátor</h2>
-    <ul>
-      <li>Hatótáv: 600–650 km (WLTP)</li>
-      <li>Töltés: Supercharger hálózat</li>
-      <li>DC gyorstöltés: Igen</li>
-    </ul>
+    <div class="tartalomdoboz">
+  <video class="video-jobbra" controls>
+    <source src="TeslaModelSP100Dgyorsulás0-100Beschleunigung.mp4" type="video/mp4" />
+  </video>
+  <table>
+    <thead>
+    <tr>
+      <th class="alcim">Jellemző</th>
+      <th class="alcim">Érték</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th style="padding-left: 70px;" colspan="2" class="focim">Teljesítmény és hajtás</th>
+    </tr>
+    <tr>
+      <td>Max. teljesítmény</td>
+      <td>1020 lóerő</td>
+    </tr>
+    <tr>
+      <td>Gyorsulás 0–100 km/h</td>
+      <td>2,1 másodperc</td>
+    </tr>
+    <tr>
+      <td>Végsebesség</td>
+      <td>322 km/h</td>
+    </tr>
+    <tr>
+      <td>Meghajtás</td>
+      <td>Dual Motor AWD</td>
+    </tr>
+    <tr>
+      <th style="padding-left: 70px;" colspan="2" class="focim">Hatótáv és akkumulátor</th>
+    </tr>
+    <tr>
+      <td>Hatótáv</td>
+      <td>600–650 km (WLTP)</td>
+    </tr>
+    <tr>
+      <td>Töltés</td>
+      <td>Supercharger hálózat</td>
+    </tr>
+    <tr>
+      <td>DC gyorstöltés</td>
+      <td>Igen</td>
+    </tr>
+  </tbody>
+  <table>
   </main>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <footer class="bg-secondary text-light text-center py-3 mt-5">
     &copy; 2025 Tesla Weboldal – Oktatási célra
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
