--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
       </div>
     </div>
 
-    <h3>Főbb jellemzők:</h3>
     <div class="row align-items-center">
       <div class="col-md-6 order-md-2">
         <img src="Tesla.motor.webp" alt="Tesla-Model-S-motor" title="Tesla-Model-S-motor" class="img-fluid rounded" />
       </div>
       <div class="col-md-6 order-md-1">
+        <h3 id="főcím">Főbb jellemzők:</h3>
         <ul>
-          <li>Teljesen elektromos hajtás</li>
-          <li>Akár 600 km hatótáv</li>
-          <li>Autopilot és önvezetés</li>
-          <li>Luxus kialakítás</li>
+          <li class="jellemzok">Teljesen elektromos hajtás</li>
+          <li class="jellemzok">Akár 600 km hatótáv</li>
+          <li class="jellemzok">Autopilot és önvezetés</li>
+          <li class="jellemzok">Luxus kialakítás</li>
         </ul>
       </div>
     </div>
