--- a/index.html
+++ b/index.html
@@ -1,66 +1,64 @@
-<!DOCTYPE html>
-<html lang="hu">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tesla Model S – Főoldal</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="bg-dark text-white text-center py-3">
-    <h1 class="cimek">Tesla Model S Bemutató</h1>
-  </header>
+  <!DOCTYPE html>
+  <html lang="hu">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tesla Model S – Főoldal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header class="bg-dark text-white text-center py-3">
+      <h1 class="cimek">Tesla Model S Bemutató</h1>
+    </header>
 
-  <nav class="navbar navbar-expand bg-secondary justify-content-center">
-    <div class="container">
-      <ul class="navbar-nav flex-row gap-3">
-        <li class="nav-item"><a class="nav-link text-white" href="index.html">Főoldal</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="altalanos.html">Általános</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="muszaki.html">Műszaki adatok</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="extrak.html">Extrák</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <main class="container my-5 bg-white p-4 rounded shadow-sm">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <img src="Tesla_Model_S-2013.webp" alt="Tesla_Model_S" title="Tesla_Model_S" class="img-fluid rounded" />
+    <nav class="navbar navbar-expand bg-secondary justify-content-center">
+      <div class="container">
+        <ul class="navbar-nav flex-row gap-3">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Főoldal</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="altalanos.html">Általános</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="muszaki.html">Műszaki adatok</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="extrak.html">Extrák</a></li>
+        </ul>
       </div>
-      <div class="col-md-6">
-        <h2>Üdvözlünk a Tesla Model S oldalán</h2>
-        <p>
-          A Tesla Model S a Tesla egyik zászlóshajója, amely ötvözi a modern technológiát, teljesítményt és luxust. Ezen a weboldalon részletes információkat találsz az autó tulajdonságairól, műszaki adatairól és extra felszereltségéről.
-        </p>
-        <div class="mb-3">
-          <a href="https://www.tesla.com/hu_hu" target="_blank" class="btn btn-dark">
-            Tesla hivatalos oldala.
+    </nav>
+
+    <main class="container my-5 bg-white p-4 rounded shadow-sm">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <img src="Tesla_Model_S-2013.webp" alt="Tesla_Model_S" title="Tesla_Model_S" class="img-fluid rounded">
+        </div>
+        <div class="col-md-6">
+          <h2>Üdvözlünk a Tesla Model S oldalán</h2>
+          <p>
+            A Tesla Model S a Tesla egyik zászlóshajója, amely ötvözi a modern technológiát, teljesítményt és luxust. Ezen a weboldalon részletes információkat találsz az autó tulajdonságairól, műszaki adatairól és extra felszereltségéről.
+          </p>
+          <a href="https://www.tesla.com/hu_hu" target="_blank" class="btn btn-dark" data-tipus="kulso-link">
+              Tesla hivatalos oldala.
           </a>
         </div>
       </div>
-    </div>
 
-    <div class="row align-items-center">
-      <div class="col-md-6 order-md-2">
-        <img src="Tesla.motor.webp" alt="Tesla-Model-S-motor" title="Tesla-Model-S-motor" class="img-fluid rounded" />
+      <div class="row align-items-center">
+        <div class="col-md-6 order-md-2">
+          <img src="Tesla.motor.webp" alt="Tesla-Model-S-motor" title="Tesla-Model-S-motor" class="img-fluid rounded">
+        </div>
+        <div class="col-md-6 order-md-1">
+          <h3 id="főcím">Főbb jellemzők:</h3>
+          <ul>
+            <li class="jellemzok">Teljesen elektromos hajtás</li>
+            <li class="jellemzok">Akár 600 km hatótáv</li>
+            <li class="jellemzok">Autopilot és önvezetés</li>
+            <li class="jellemzok">Luxus kialakítás</li>
+          </ul>
+        </div>
       </div>
-      <div class="col-md-6 order-md-1">
-        <h3 id="főcím">Főbb jellemzők:</h3>
-        <ul>
-          <li class="jellemzok">Teljesen elektromos hajtás</li>
-          <li class="jellemzok">Akár 600 km hatótáv</li>
-          <li class="jellemzok">Autopilot és önvezetés</li>
-          <li class="jellemzok">Luxus kialakítás</li>
-        </ul>
-      </div>
-    </div>
-  </main>
+    </main>
 
-  <footer class="bg-secondary text-light text-center py-3 mt-5">
-    &copy; 2025 Tesla Weboldal – Oktatási célra
-  </footer>
+    <footer class="bg-secondary text-light text-center py-3 mt-5">
+      &copy; 2025 Tesla Weboldal – Oktatási célra
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+  </html>
