--- a/muszaki.html
+++ b/muszaki.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Műszaki adatok</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="bg-dark text-white text-center py-3">
@@ -32,7 +32,7 @@
 
     <div class="tartalomdoboz">
   <video class="video-jobbra" controls>
-    <source src="TeslaModelSP100Dgyorsulás0-100Beschleunigung.mp4" type="video/mp4" />
+    <source src="TeslaModelSP100Dgyorsulás0-100Beschleunigung.mp4" type="video/mp4">
   </video>
   <table>
     <thead>
@@ -76,8 +76,9 @@
       <td>DC gyorstöltés</td>
       <td>Igen</td>
     </tr>
-  </tbody>
-  <table>
+    </tbody>
+  </table>
+  </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <footer class="bg-secondary text-light text-center py-3 mt-5">
