--- a/extrak.html
+++ b/extrak.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Extrák</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="bg-dark text-white text-center py-3">
@@ -25,7 +25,7 @@
    <main class="container my-5 bg-white p-4 rounded shadow-sm">
     <div class="row align-items-center mb-4">
       <div class="col-md-6">
-        <img src="Tesla.erintokepernyo.png" alt="Tesla_model_erintokepernyo" title="Tesla_model_erintokepernyo" class="img-fluid rounded" />
+        <img src="Tesla.erintokepernyo.png" alt="Tesla_model_erintokepernyo" title="Tesla_model_erintokepernyo" class="img-fluid rounded">
       </div>
       <div class="col-md-6">
         <div class="mb-3">
@@ -49,5 +49,8 @@
           <li>Panoráma tető</li>
           <li>Prémium hangrendszer</li>
         </ul>
-      </div>
+        </div> 
+      </div> 
+    </main> 
+  </body>
 </html>
