--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           <li class="nav-item"><a class="nav-link text-white" href="altalanos.html">Általános</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="muszaki.html">Műszaki adatok</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="extrak.html">Extrák</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="statisztika.html">Statisztika</a></li>
+</a></li>
         </ul>
       </div>
     </nav>
