--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <main class="container my-5 bg-white p-4 rounded shadow-sm">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <img src="Tesla_Model_S-2013.webp" alt="Tesla_Model_S" title="Tesla_Model_S" class="img-fluid rounded">
+          <a href="Tesla_Model_S-2013.webp" target="_blank">
+            <img src="kis-tesla.jpg" alt="Kép leírása" width="150" id="kiskep" class="thumbnails">
+          </a>
         </div>
         <div class="col-md-6">
           <h2>Üdvözlünk a Tesla Model S oldalán</h2>
@@ -43,7 +45,9 @@
 
       <div class="row align-items-center">
         <div class="col-md-6 order-md-2">
-          <img src="Tesla.motor.webp" alt="Tesla-Model-S-motor" title="Tesla-Model-S-motor" class="img-fluid rounded">
+          <a href="Tesla.motor.webp" target="_blank">
+            <img src="kis-motor.jpg" alt="kis-motor" width="150" class="thumbnails">
+          </a>
         </div>
         <div class="col-md-6 order-md-1">
           <h3 id="főcím">Főbb jellemzők:</h3>
