--- a/statisztika.html
+++ b/statisztika.html
@@ -51,18 +51,23 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img src="stat 1.webp" alt="Eladási statisztika grafikon" class="img-fluid rounded shadow">
+        <a href="stat 1.webp" target="_blank">
+            <img src="kis-ábra.jpg" alt="kis-motor" width="150" class="thumbnails">
+          </a>
       </div>
-    </div>
+    </div>  
 
     <h3 class="mb-3">Műszaki adatok áttekintése</h3>
     <p>A Tesla Model S teljesítmény- és technikai paramétereit bemutató ábra:</p>
 
     <div class="row mb-5">
       <div class="col-md-12 text-center">
-        <img src="stat 2.png" alt="Tesla Model S műszaki ábra" class="img-fluid rounded shadow">
+        <a href="stat 2.png" target="_blank">
+            <img src="kis-ábra2.png" alt="kis-motor" width="150" id="kulonkep">
+          </a>
       </div>
     </div>
+    
 
     <h3>Gyártási mérföldkövek</h3>
     <ul>
