--- a/extrak.html
+++ b/extrak.html
@@ -26,7 +26,9 @@
    <main class="container my-5 bg-white p-4 rounded shadow-sm">
     <div class="row align-items-center mb-4">
       <div class="col-md-6">
-        <img src="Tesla.erintokepernyo.png" alt="Tesla_model_erintokepernyo" title="Tesla_model_erintokepernyo" class="img-fluid rounded">
+        <a href="Tesla.erintokepernyo.png" target="_blank">
+            <img src="kis-erintokepernyo.jpg" alt="kis-erintokepernyo" width="150" id="kiskep" class="thumbnails">
+          </a>
       </div>
       <div class="col-md-6">
         <div class="mb-3">
@@ -52,6 +54,9 @@
         </ul>
         </div> 
       </div> 
-    </main> 
+    </main>
+    <footer class="bg-secondary text-light text-center py-3 mt-5">
+    &copy; 2025 Tesla Weboldal – Oktatási célra
+  </footer> 
   </body>
 </html>
