--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="container my-5 bg-white p-4 rounded shadow-sm">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <a href="Tesla_Model_S-2013.webp" target="_blank">
+          <a href="TeslaModelS.webp" target="_blank">
             <img src="kis-tesla.jpg" alt="Kép leírása" width="150" id="kiskep" class="thumbnails">
           </a>
         </div>
